@@ -1,3 +1,9 @@
+Wed May 20 09:56:43 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * orbsvcs/orbsvcs/Trader/Constraint_l.cpp:
+        * orbsvcs/tests/FT_App/FT_Client.cpp:
+          Use ACE_OS::fileno
+
 Wed May 20 11:50:00 UTC 2009  Simon Massey  <sma at prismtech dot com>
 
         * tests/Bug_3674_Regression/test.cpp:
